# my-backup-helper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  backup-config.debug.json  build.sh  check.sh  install.sh  my-backup-helper.files  my-backup-script.files
config-schema/: schema.json  test-config.json
libs/: sha1.hpp
src/: bash-completion-scripts.hpp  bash-completion-scripts.sh  bash-completion.hpp  bash-completion.sh  build-options.cc  build-options.hpp  check-files-existence.hpp  command-generator.hpp  config-file-loader.hpp  config-item.hpp  config-name-matcher.hpp  config-parser-comments.hpp  config-parser-validator.hpp  config-parser.hpp  launch-arguments.hpp  log-writer.hpp  main.cc  password-input.hpp  utils.cc  utils.hpp
test/: compile.sh  test-gason.cc  wordexp.cc
